Fix header component z-index

--- a/app/sass/components/header.sass
+++ b/app/sass/components/header.sass
@@ -4,6 +4,7 @@
   top: 0
   left: 0
   padding: 40px 0
+  z-index: 100
   &__container
     display: flex
     justify-content: space-between
